test/should_pass/basic_006.grg
actions basic_006;

rule r {
	pattern {
		negative {
		}
	}
	replace {
	}
}

